--- a/In n Out Custom.ipynb
+++ b/In n Out Custom.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The In & Out Strategy \n",
+    "Developed by the Quantopian & QuantConnect Community. Taken from Peter Guenther's \"In Out V7\" project and placed in Jupyter Notebook to assist with manual trading. Please take the time to understand the strategy before blindly trading it. \n",
+    "\n",
+    "[QuantConnect Forum](https://www.quantconnect.com/forum/discussion/9597/the-in-amp-out-strategy-continued-from-quantopian/p9)\n",
+    "\n",
+    "### Trading the In & Out Strategy\n",
+    "Run the entire script from top to bottom to receive the most recent signal. **Run the entire script by doing a Kernel Restart & Run All.** If there is an \"In\" signal (1), equity markets are healthy and we enter QQQ. In the event of an \"Out\" signal (0), exit equities and enter a mixture of bonds and shorts (TLT, IEF, SPDN)\n",
+    "\n",
+    "### Requirements\n",
+    "Make sure you have the required imports below. You will need to install yahoo finance package. \n",
+    "\n",
+    "[Install yahoo_fin package](http://theautomatic.net/yahoo_fin-documentation/)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -9,10 +27,15 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import random\n",
-    "import plotly.express as px\n",
     "from yahoo_fin.stock_info import *\n",
-    "import matplotlib.pyplot as plt\n",
     "from collections import deque"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialize Variables"
    ]
   },
   {
@@ -53,6 +76,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gather price data of all symbols"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -64,6 +94,13 @@
     "    adj_closed = data['close'][- (LOOKBACK + 4000):]\n",
     "    df_data[stock_ticker] = adj_closed\n",
     "data = pd.DataFrame(df_data).dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Moving window of dates"
    ]
   },
   {
@@ -130,20 +167,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_dict = {\n",
+    "master = pd.DataFrame({\n",
     "    'date': date, \n",
     "    'in_out': in_out, \n",
     "    'SPY': benchmark, \n",
     "    'TLT': bonds\n",
-    "}\n",
-    "master = pd.DataFrame(df_dict)\n",
+    "})\n",
     "master = master.set_index('date')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Here are the signals!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -277,6 +322,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A visualization of signals produced in the last 1000 days "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -310,8 +362,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualization of last 100 days "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +380,7 @@
        "       <AxesSubplot:xlabel='date'>], dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
